logs/mobility/build.make.096.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In constructor ‘DropOffController::DropOffController()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:21:5: error: ‘seenEnoughCenterTagsCount’ was not declared in this scope
     seenEnoughCenterTagsCount = 10;//seen enough for what tho? i said for what tho?
     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:22:5: error: ‘collectionPointVisualDistance’ was not declared in this scope
     collectionPointVisualDistance = 0.5; //in meters
     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:28:5: error: ‘left’ was not declared in this scope
     left = false;
     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:28:5: note: suggested alternative:
In file included from /usr/include/c++/4.8/ios:42:0,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from /opt/ros/indigo/include/ros/time.h:54,
                 from /opt/ros/indigo/include/ros/serialization.h:34,
                 from /opt/ros/indigo/include/geometry_msgs/Pose2D.h:14,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.h:5,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:
/usr/include/c++/4.8/bits/ios_base.h:922:3: note:   ‘std::left’
   left(ios_base& __base)
   ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:29:5: error: ‘right’ was not declared in this scope
     right = false;
     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:29:5: note: suggested alternative:
In file included from /usr/include/c++/4.8/ios:42:0,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from /opt/ros/indigo/include/ros/time.h:54,
                 from /opt/ros/indigo/include/ros/serialization.h:34,
                 from /opt/ros/indigo/include/geometry_msgs/Pose2D.h:14,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.h:5,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:
/usr/include/c++/4.8/bits/ios_base.h:930:3: note:   ‘std::right’
   right(ios_base& __base)
   ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
